<resources>

    <string name="app_name">TGraph</string>
    <string name="app_project">TGraph</string>

    <string name="app_title">Record Your Thinking</string>
    <string name="my_plan">initial plan</string>
    <string name="add_a_same_floor_node">Add a same floor node.</string>
    <string name="null_node">Input your content:</string>
    <string name="add_a_sub_node">Add a sub node.</string>
    <string name="edit_node">Edit Node</string>
    <string name="title_add_sub_node">add SubNode</string>
    <string name="input_a_new_node">input a new node</string>
    <string name="enter">Enter</string>

    <!--tab menu-->
    <string name="tab_sub_node">child</string>
    <string name="tab_node">Sibling</string>
    <string name="tab_front_view">CenterView</string>
    <string name="delete">Delete</string>
    <string name="cannot_add_brother_node_with_root">You can not add a peer node to a root node!</string>
    <string name="save_file">Save File</string>
    <string name="no">NO</string>
    <string name="save">Save</string>
    <string name="file_destroyed">File has been destroyed,Please delete!</string>
    <string name="denied_write_storage">You have denied access to WRITE_EXTERNAL_STORAGE!</string>
    <string name="trans_item">trans_item</string>

    <string name="defualt_my_plan">Title</string>
    <string name="unkown_error">unknow error!</string>
    <string name="denied_read_storage">you denied read storage permission!</string>
    <string name="stroage_permission">Sorry, we need the Storage Permission to do that!</string>
    <string name="same_name_file">Have the same name file!</string>
    <string name="file_name_empty">The text name is empty!</string>
    <string name="file_is_empty">FILE IS EMPTY !</string>
    <string name="about">About</string>
    <string name="exit_edit">Quit</string>
    <string name="me_information">Do something interesting. \n\nzhongtest@gmail.com</string>
    <string name="eg_test_file">/TestMaps/android.test</string>
    <string name="new_map">New Map</string>
    <string name="about_us">About us</string>

    <string name="cancel">Cancel</string>
    <string name="enter_sure">Yes</string>
    <string name="delete_title">Note:\tRemove the file ？</string>


</resources>
